# CadToy

./: .gitignore  CMakeLists.txt  README.md  Research.md  Spec.md
Docs/: Logger.md
res/lang/: en.json  zh.json
sysconfig/: SysConfig.h.in
tchCadToy/: CMakeLists.txt
tchCadToy/inc/UI/: CloseModal.h  CommandLineWindow.h  FileTabBar.h  Layout.h  MainMenuBar.h  OptionsModal.h
tchCadToy/inc/command/: Command.h  CommandClose.h  CommandNew.h  CommandOptions.h  CommandParser.h  Keyboard.h
tchCadToy/inc/debug/: Logger.h
tchCadToy/inc/doc/: BinaryDocument.h  DocManager.h  Document.h
tchCadToy/inc/file/: File.h  FileManager.h
tchCadToy/inc/gl/: Canvas.h
tchCadToy/inc/input/: InputHandler.h
tchCadToy/inc/render/: LogicalViewport.h  Renderer.h
tchCadToy/inc/sys/: Global.h
tchCadToy/inc/utils/: GlobalUtils.h  LocalizationManager.h
tchCadToy/src/UI/: CloseModal.cpp  CommandLineWindow.cpp  FileTabBar.cpp  Layout.cpp  MainMenuBar.cpp  OptionsModal.cpp
tchCadToy/src/command/: Command.cpp  CommandClose.cpp  CommandNew.cpp  CommandOptions.cpp  CommandParser.cpp  Keyboard.cpp
tchCadToy/src/debug/: Logger.cpp
tchCadToy/src/doc/: BinaryDocument.cpp  DocManager.cpp  Document.cpp
tchCadToy/src/file/: File.cpp  FileManager.cpp
tchCadToy/src/gl/: Canvas.cpp  GLFuncs.cpp
tchCadToy/src/input/: InputHandler.cpp
tchCadToy/src/render/: LogicalViewport.cpp  Renderer.cpp
tchCadToy/src/sys/: Global.cpp  main.cpp
tchCadToy/src/utils/: GlobalUtils.cpp
tchGeneral/inc/: Color.h  Geometry.h  Layer.h  SaveLoad.h  Transform.h  UndoRedo.h
tchMain/: CMakeLists.txt
(+29 files in other folders)
